--- a/UserControlHome.xaml
+++ b/UserControlHome.xaml
@@ -7,5 +7,6 @@
         mc:Ignorable="d"
         Background="Aquamarine">
     <Grid>
+        <TextBlock Name="Wellcome">Hola Pablito</TextBlock>
     </Grid>
 </UserControl>
